--- a/foundry.toml
+++ b/foundry.toml
@@ -3,4 +3,7 @@ src = "src"
 out = "out"
 libs = ["lib"]
 
-# See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+# See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-option
+verbosity = 2
+
+rpc_endpoints = { mainnet = "https://rpc.ankr.com/eth", polygon = "https://rpc.ankr.com/polygon", avax = "https://rpc.ankr.com/avalanche" }
